<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp">
  <EditText
      android:id="@+id/etTitle"
      android:hint="@string/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="4dp"
      android:maxLines="1"
      android:layout_alignParentTop="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_toStartOf="@+id/cbDone"
      android:layout_toLeftOf="@+id/cbDone"
      android:textSize="16sp"
      android:textStyle="bold"
      android:layout_margin="1dp"
      android:background="#EEEEEE"
  />
  <CheckBox
      android:id="@+id/cbDone"
      android:text="@string/is_done"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:padding="4dp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_alignBottom="@id/etTitle"
      android:layout_alignTop="@id/etTitle"
      android:layout_marginStart="1dp"
      android:layout_marginLeft="1dp"
      android:layout_marginEnd="1dp"
      android:layout_marginRight="1dp"
      android:background="#EEEEEE"
  />
  <EditText
      android:id="@+id/etDescription"
      android:hint="@string/description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="4dp"
      android:maxLines="1"
      android:gravity="start"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_above="@+id/btnEditSave"
      android:layout_below="@id/etTitle"
      android:textSize="14sp"
      android:layout_margin="1dp"
      android:background="#EEEEEE"
  />
  <Button
      android:id="@+id/btnEditSave"
      android:text="@string/edit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"
      android:layout_margin="4dp"
  />
  <Button
      android:id="@+id/btnDelete"
      android:text="@string/delete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@id/btnEditSave"
      android:layout_toLeftOf="@id/btnEditSave"
      android:layout_toStartOf="@id/btnEditSave"
      android:layout_margin="4dp"
  />
</RelativeLayout>